# ypir-tileserver

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  run_demo.sh
demo/frontend/: app.js  index.html  style.css
demo/proxy/: server.py
scripts/: 01-download-osm.sh  02-run-planetiler.sh  03-extract-basemap.py  build-dataset.sh  dataset  dev-up.sh  prepare_tiles.py
server/: Cargo.toml
server/src/: main.rs
shared/frontend/: map-setup.js  tile-batch.js  tile-cache.js  tile-decoder.js
shared/proxy/: common.py
spiral-rs/: LICENSE
spiral-rs/examples/: cpu_ref_nu2.rs  quick_test.rs  spiral_e2e_test.rs  test_gpu_server.rs
spiral-rs/src/: client.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
