[workspace]

[package]
name = "ypir-cpu-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ypir = { git = "https://github.com/codygunton/ypir", rev = "675ee08c0aa8038589eb6d63fa501df836c2a5f8" }
spiral-rs = { git = "https://github.com/menonsamir/spiral-rs.git", rev = "6929441" }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.10"
rayon = "1"

[profile.release]
opt-level = 3
