[package]
name = "ypir-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spiral-rs = { path = "../spiral-rs" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
js-sys = "0.3"
rand = "0.8"
rand_chacha = "0.3"
