[package]
name = "ypir-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spiral-rs = { path = "../spiral-rs" }
# Pinned because wasm-pack's bundled wasm-bindgen CLI has to match this
# exactly; letting Cargo pull the newest 0.2.x drifts ahead of what
# wasm-pack 0.13.x ships. Bump both together when upgrading.
wasm-bindgen = "=0.2.92"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
js-sys = "0.3"
rand = "0.8"
rand_chacha = "0.3"
